--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="font/stylesheet.css">
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
