--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="stylesheet" href="./css/App.css">
+    <link rel="stylesheet" href="./css/Menu.css">
+    <link rel="stylesheet" href="./css/Footer.css">
+    <link rel="stylesheet" href="./css/Card.css">
+    <link rel="stylesheet" href="./css/Contact.css">
+    <link rel="stylesheet" href="./css/MediaScreen.css">
+
     <link rel="stylesheet" href="bootstrap-icons-1.8.1/bootstrap-icons.css">
     <link rel="stylesheet" href="font/stylesheet.css">
   </head>
