--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/App.css">
     <link rel="stylesheet" href="./css/Menu.css">
     <link rel="stylesheet" href="./css/Footer.css">
+    <link rel="stylesheet" href="./css/Error.css">
     <link rel="stylesheet" href="./css/Card.css">
     <link rel="stylesheet" href="./css/Contact.css">
     <link rel="stylesheet" href="./css/MediaScreen.css">
