--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta property="og:url" content="https://estarlincito.tech" />
+		<meta property="og:title" content="Estarlincito" />
+		<meta property="og:description" content="Desbloqueo de Celulares, Diseño Web, ventas de Celulares, PC y mucho más." />
+		<meta property="og:image" content="%PUBLIC_URL%/img/favicon-96x96.ico" />
+
     <link rel="icon" href="%PUBLIC_URL%/img/favicon-96x96.ico" />
-    <!-- <meta name="theme-color" content="#000000" /> -->
-    <!-- <meta name="description" content="Web site created using create-react-app"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="stylesheet" href="./css/App.css">
