--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:url" content="https://estarlincito.tech" />
 		<meta property="og:title" content="Estarlincito" />
-		<meta property="og:description" content="Desbloqueo de Celulares, Diseño Web, ventas de Celulares, PC y mucho más." />
+		<meta property="og:description" content="¡Soporte técnico, Diseño web y mucho más!" />
 		<meta property="og:image" content="%PUBLIC_URL%/img/favicon-96x96.ico" />
 
     <link rel="icon" href="%PUBLIC_URL%/img/favicon-96x96.ico" />
