--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <meta property="og:url" content="https://estarlincito.tech" />
-		<meta property="og:title" content="Estarlincito" />
-		<meta property="og:description" content="¡Soporte técnico, diseño web y mucho más!" />
-		<meta property="og:image" content="%PUBLIC_URL%/img/favicon-96x96.ico" />
-
+    <meta property="og:title" content="Estarlincito" />
+    <meta
+      property="og:description"
+      content="¡Soporte técnico, diseño web y mucho más!"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/img/favicon-96x96.ico" />
     <link rel="icon" href="%PUBLIC_URL%/img/favicon-96x96.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <link rel="stylesheet" href="./css/App.css">
-    <link rel="stylesheet" href="./css/Menu.css">
-    <link rel="stylesheet" href="./css/Footer.css">
-    <link rel="stylesheet" href="./css/NotFound.css">
-    <link rel="stylesheet" href="./css/Share.css">
-    <link rel="stylesheet" href="./css/Card.css">
-    <link rel="stylesheet" href="./css/Contact.css">
-    <link rel="stylesheet" href="./css/MediaScreen.css">
-
-    <link rel="stylesheet" href="bootstrap-icons-1.8.1/bootstrap-icons.css">
-    <link rel="stylesheet" href="font/stylesheet.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
