--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       property="og:description"
       content="¡Soporte técnico, diseño web y mucho más!"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/img/favicon-96x96.ico" />
-    <link rel="icon" href="%PUBLIC_URL%/img/favicon-96x96.ico" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon-96x96.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-96x96.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
