--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:url" content="https://estarlincito.tech" />
-    <meta property="og:title" content="Estarlincito" />
-    <meta
-      property="og:description"
-      content="¡Soporte técnico, diseño web y mucho más!"
-    />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon-96x96.ico" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon-96x96.ico" />
-  </head>
+  <head> </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
