--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon-96x96.ico" />
+    <link
+      rel="icon"
+      href="https://estarlincito.tech/static/media/favicon-96x96.2c60b5c1b9aab9f1400b.ico"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
