--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      href="https://estarlincito.tech/static/media/favicon-96x96.2c60b5c1b9aab9f1400b.ico"
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Estarlincito" />
+    <meta
+      name="description"
+      content="¡Soporte técnico, diseño web y mucho más!"
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://estarlincito.tech/" />
+    <meta property="og:title" content="Estarlincito" />
+    <meta
+      property="og:description"
+      content="¡Soporte técnico, diseño web y mucho más!"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon-96x96.ico" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://estarlincito.tech" />
+    <meta property="twitter:title" content="Estarlincito" />
+    <meta
+      property="twitter:description"
+      content="¡Soporte técnico, diseño web y mucho más!"
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/favicon-96x96.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
